B#45407 fixed maps on small screens

--- a/_assets/stylesheets/powershop.small.css.less
+++ b/_assets/stylesheets/powershop.small.css.less
@@ -87,7 +87,7 @@
 	.map {
 		width: 100%;
 		float: left;
-		height: 220px;
+		height: 400px;
 	}
 
 	/* nav */
